# auth_sprint

./: docker-compose.yml  pyproject.toml  readme.md
auth/: .env.example  Dockerfile  DockerfileTest  app.py  pywsgi.py  readme.md  requirements.txt  wsgi_app.py
auth/api/v1/: messages.py
auth/core/: config.py  logger.py  permissions.py
auth/database/: db.py  redis_cache.py
auth/migrations/: env.py
auth/migrations/versions/: ce186225c103_partitional.py  e7565649e1d9_initial.py
auth/models/: auth_history.py  captcha.py  role.py  social_account.py  user.py  user_role.py
auth/nginx_rm/: auth.conf  auth_movies.conf  movies.conf
auth/nginx_rm/configs/: site.conf
auth/tasks/: CRUD_roles.md  OpenAPI.md  create_db.md  documentation.md  models.md  role_method.md  test_manage_access.md  test_user_auth.md  token_auth.md  user_auth.md
auth/tests/functional/: .env.example  conftest.py  docker-compose.yml  requirements.txt  settings.py
auth/utils/: backoff.py  decorators.py  exceptions.py  jaeger.py  rate_limit.py  user_agent_parse.py  validator.py
movies/: Dockerfile  README.md  requirements.txt
movies/ETL/: .env.example  Dockerfile  backoff_.py  config.py  es_indexes.py  etl_classes.py  etl_process.py  requirements.txt  sql_query.py  state.py
movies/nginx/: Dockerfile  nginx.conf
movies/src/: .env.example  Dockerfile_app  main.py  requirements.txt
movies/src/cache/: redis_cache.py
movies/src/core/: config.py  messages.py
movies/tasks/: 00_review.md  01_SOLID_ES.md  02_SOLID_redis.md  03_SOLID_views.md  04_functional_test_infra.md  05_functional_test_film.md  06_functional_test_person.md  07_functional_test_genre.md  08_functional_test_search.md
nginx/: Dockerfile  auth.conf  auth_movies.conf  nginx.conf
(+86 files in other folders)
